tree-sitter-karn/grammar.js
    source_file: ($) =>
      choice(
        repeat1(
          choice(
            $.commons_decl,
            $.context_decl,
            $.adapter_decl,
            $.integration_decl,
            $.test_decl,
          ),
        ),
        repeat1($._item_fragment),
        $._expr_fragment,
      ),

    _item_fragment: ($) =>
      choice($._context_body_item, $.handler, $.state_decl, $.key_decl),

    // The body of a fragment block: statements then an optional tail value,
    // mirroring `block` so multi-statement and bare-expression snippets parse.
    // Spelled as a non-empty choice so the rule never matches the empty input.
    _expr_fragment: ($) =>
      choice(
        seq(repeat1($._statement), optional(field("tail", $._expression))),
        field("tail", $._expression),
      ),

    commons_decl: ($) =>
      seq(
        "commons",
        field("name", $.qualified_name),
        choice(
          seq("{", repeat($._commons_body_item), "}"),
          // Fragment form: header followed by items to EOF (or the next
          // top-level header).
          repeat($._commons_body_item),
        ),
      ),

    context_decl: ($) =>
      seq(
        "context",
        field("name", $.qualified_name),
        choice(
          seq("{", repeat($._context_body_item), "}"),
          repeat($._context_body_item),
        ),
      ),

    // v0.17: an adapter — the host boundary (capability contract + binding).
    // Brace or fragment form, like commons/context.
    adapter_decl: ($) =>
      seq(
        "adapter",
        field("name", $.qualified_name),
        choice(
          seq("{", repeat($._adapter_body_item), "}"),
          repeat($._adapter_body_item),
        ),
      ),

    // v0.7: test unit targeting a commons or context. Brace or fragment form
    // (a test case is `test "string" …`, so it never collides with a new
    // `test <qualified_name>` unit — but the disambiguation needs one extra
    // token of lookahead, handled by a declared conflict).
    test_decl: ($) =>
      prec.right(
        seq(
          "test",
          field("target", $.qualified_name),
          choice(
            seq("{", repeat($._test_body_item), "}"),
            repeat($._test_body_item),
          ),
        ),
      ),

    // v0.16: a multi-Worker integration test. `integration` is contextual
    // after `test` and before the suite-name string; `wires` lists the
    // participating contexts. Body holds `uses` and `test "name"` cases (no
    // `mocks` — integration tests wire real implementations).
    qualified_name: ($) => sep1($.identifier, "."),

    _commons_body_item: ($) =>
      choice(
        $.uses_decl,
        $.type_decl,
        $.fn_decl,
        // Permissive: capability/service/etc. can syntactically appear
        // anywhere — the LSP reports semantic placement errors.
        $.capability_decl,
        $.provider_decl,
        $.service_decl,
        $.agent_decl,
      ),

    _context_body_item: ($) =>
      choice(
        $.uses_decl,
        $.consumes_decl,
        $.exports_decl,
        $.type_decl,
        $.fn_decl,
        $.capability_decl,
        $.provider_decl,
        $.service_decl,
        $.agent_decl,
      ),

    // v0.17: adapter items — a binding clause, capabilities, boundary types,
    // inline pure helpers and `uses`, external providers, and `exports`.
    // v0.18 adds `consumes` (adapter-to-adapter capability dependencies).
    // Permissive (service/agent parse here too); the LSP reports the semantic
    // placement error.
    _adapter_body_item: ($) =>
      choice(
        $.binding_decl,
        $.uses_decl,
        $.consumes_decl,
        $.exports_decl,
        $.type_decl,
        $.fn_decl,
        $.capability_decl,
        $.provider_decl,
        $.service_decl,
        $.agent_decl,
      ),

    _test_body_item: ($) =>
      choice($.uses_decl, $.consumes_decl, $.mocks_decl, $.test_case),

    // -- Headers / clauses --

    consumes_decl: ($) =>
      seq(
        "consumes",
        field("target", $.qualified_name),
        optional(
          choice(
            // v0.6: `consumes a.b as Alias`.
            seq("as", field("alias", $.identifier)),
            // v0.17: `consumes a.b { Cap, … }` — selected capabilities.
            seq(
              "{",
              optional(sep1(field("capability", $.identifier), ",")),
              optional(","),
              "}",
            ),
          ),
        ),
      ),

    // v0.17: an adapter's binding module + optional npm dependency map.
    binding_decl: ($) =>
      seq(
        "binding",
        field("module", $.string_literal),
        optional(
          seq(
            "requires",
            "{",
            optional(sep1($.binding_requirement, ",")),
            optional(","),
            "}",
          ),
        ),
      ),
    binding_requirement: ($) =>
      seq(field("package", $.string_literal), ":", field("range", $.string_literal)),
    exports_decl: ($) =>
      seq(
        "exports",
        // v0.15: `capability` joins the type-visibility keywords here.
        field("kind", choice("opaque", "transparent", "capability")),
        "{",
        optional(sep1(field("name", $.identifier), ",")),
        optional(","),
        "}",
      ),

    // -- Type declarations --

    type_decl: ($) =>
      seq(
        "type",
        field("name", $.identifier),
        "=",
        field("body", $._type_body),
      ),

    _type_body: ($) =>
      choice(
        $.opaque_type,
        $.refined_type,
        $.record_type,
        $.sum_type,
        $.enum_type,
      ),

    opaque_type: ($) =>
      seq(
        "opaque",
        field("base", $._base_type),
        optional(seq("where", field("refinement", $.refinement))),
      ),

    refined_type: ($) =>
      prec(
        1,
        seq(
          field("base", $._base_type),
          optional(seq("where", field("refinement", $.refinement))),
        ),
      ),

    record_type: ($) =>
      seq(
        "{",
        optional(sep1($.record_field, ",")),
        optional(","),
        "}",
      ),

    record_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_ref),
        optional(seq("where", field("refinement", $.refinement))),
        // v0.11: an optional initial-value expression. Meaningful on agent
        // `state` fields; the checker restricts where it applies.
        optional(seq("=", field("init", $._expression))),
      ),

    sum_type: ($) => prec.right(repeat1($.sum_variant)),
    sum_variant: ($) =>
      seq(
        "|",
        field("name", $.constant_name),
        optional(
          seq(
            "(",
            optional(sep1($.variant_payload_field, ",")),
            optional(","),
            ")",
          ),
        ),
      ),
    refinement: ($) => sep1($._refinement_pred, "and"),
    _refinement_pred: ($) =>
      choice(
        $.pred_call,
        $.pred_atom,
      ),
    pred_call: ($) =>
      seq(field("name", $.predicate_name), "(", optional(sep1($._pred_arg, ",")), ")"),
    pred_atom: ($) => $.predicate_name,
    predicate_name: ($) =>
      choice(
        "Matches",
        "InRange",
        "MinLength",
        "MaxLength",
        "Length",
        "NonNegative",
        "Positive",
        "NonEmpty",
      ),
    _pred_arg: ($) => choice($.number_literal, $.string_literal),

    _base_type: ($) => $.base_type,
    base_type: () => choice("Int", "String", "Bool"),

    _type_ref: ($) =>
      choice(
        $.function_type_ref,
        $._base_type,
        $.unit_type,
        $.validation_error_type,
        $.generic_type_ref,
        $.identifier,
      ),

    // v0.20a: a function type — `A -> B`, `(A, B) -> C`, `() -> B`,
    // right-associative (prec.right). A parenthesised parameter list is only
    // a function type when followed by `->`; bare `()` stays the unit type.
    function_type_ref: ($) =>
      prec.right(
        seq(
          field(
            "params",
            choice(
              $._base_type,
              $.unit_type,
              $.validation_error_type,
              $.generic_type_ref,
              $.identifier,
              seq("(", sep1($._type_ref, ","), optional(","), ")"),
            ),
          ),
          "->",
          field("return_type", $._type_ref),
        ),
      ),

    unit_type: () => seq("(", ")"),
    generic_type_ref: ($) =>
      seq(
        field(
          "name",
          choice(
            alias("Result", $.builtin_type),
            alias("Option", $.builtin_type),
            alias("Effect", $.builtin_type),
            // v0.9: HTTP result type.
            alias("HttpResult", $.builtin_type),
          ),
        ),
        "[",
        sep1(field("arg", $._type_ref), ","),
        "]",
      ),

    // -- Function declarations --

    fn_decl: ($) =>
      seq(
        "fn",
        field("name", choice($.method_name, $.identifier)),
        // v0.20a: optional `[A, B]` type parameters (functions only).
        optional(seq("[", sep1(field("type_param", $.identifier), ","), "]")),
        "(",
        optional($._params),
        ")",
        "->",
        field("return_type", $._type_ref),
        field("body", $.block),
      ),
    _params: ($) =>
      seq(
        choice($.self_param, $.param),
        repeat(seq(",", $.param)),
        optional(","),
      ),
    param: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_ref),
      ),

    // -- v0.5: capabilities, providers, services, agents --

    capability_decl: ($) =>
      seq(
        "capability",
        field("name", $.identifier),
        "{",
        repeat($.capability_op),
        "}",
      ),
    capability_op: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
      ),

    provider_decl: ($) =>
      seq(
        "provides",
        field("capability", $.identifier),
        "=",
        field("provider", $.identifier),
        // v0.12: a provider may depend on other capabilities.
        optional(field("given", $.given_clause)),
        // v0.17: a bodiless provider is *external* — supplied by an adapter's
        // binding. The absence of the brace block (not an empty one) is the
        // signal; the LSP reports placement errors (body in an adapter, or
        // bodiless outside one).
        optional(seq("{", repeat($.provider_op), "}")),
      ),
    provider_op: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        field("body", $.block),
      ),

    service_decl: ($) =>
      seq(
        "service",
        field("name", $.identifier),
        "{",
        repeat($.handler),
        "}",
      ),

    state_decl: ($) =>
      seq(
        "state",
        "{",
        optional(sep1($.record_field, ",")),
        optional(","),
        "}",
      ),

    // v0.5 `on call`, v0.9 `on http METHOD "path"`, v0.10a `on cron "expr"`,
    // and v0.10b `on queue "name"` handlers.
    handler: ($) =>
      choice($.call_handler, $.http_handler, $.cron_handler, $.queue_handler),
    call_handler: ($) =>
      seq(
        "on",
        "call",
        optional(field("method", $.identifier)),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    http_handler: ($) =>
      seq(
        "on",
        "http",
        field("method", $.http_method),
        field("path", $.string_literal),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    http_method: () => choice("GET", "POST", "PUT", "PATCH", "DELETE"),
    // v0.10a: `on cron "<expr>" (at: Int?) -> Effect[Result[(), E]] { … }`.
    // The schedule sits bare after `cron`, mirroring `on http`'s bare path.
    cron_handler: ($) =>
      seq(
        "on",
        "cron",
        field("schedule", $.string_literal),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    // v0.10b: `on queue "<name>" (message: T) -> Effect[Result[(), E]] { … }`.
    queue_handler: ($) =>
      seq(
        "on",
        "queue",
        field("name", $.string_literal),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    given_clause: ($) =>
      // v0.15: a capability may be a bare local name or a dotted cross-context
      // reference (`B.Cap` / `platform.time.Clock`).
      seq("given", sep1(field("capability", $.qualified_name), ",")),

    // -- v0.7: test bodies --

    mocks_decl: ($) =>
      seq(
        "mocks",
        field("capability", $.identifier),
        "=",
        field("impl", $.identifier),
        "{",
        repeat($.provider_op),
        "}",
      ),
    test_case: ($) =>
      seq("test", field("name", $.string_literal), field("body", $.block)),

    // -- Block & statements --

    // A block is a run of statements ending in a tail expression (the block's
    // value). The tail is optional because a test body may end in a statement
    // such as a bare `assert`.
    block: ($) =>
      seq("{", repeat($._statement), optional(field("tail", $._expression)), "}"),

    // `assert` is an expression (v0.9.1) but also appears in statement
    // position within a test body (an expression-statement of type `()`).
    _statement: ($) =>
      choice($.let_stmt, $.effect_let_stmt, $.commit_stmt, prec(1, $.assert_expr)),

    let_stmt: ($) =>
      seq(
        "let",
        field("name", $._binding_name),
        optional(seq(":", field("type", $._type_ref))),
        "=",
        field("value", $._expression),
      ),
    effect_let_stmt: ($) =>
      seq(
        "let",
        field("name", $._binding_name),
        optional(seq(":", field("type", $._type_ref))),
        "<-",
        field("value", $._expression),
      ),
    _binding_name: ($) => choice($.identifier, alias("_", $.wildcard)),

    // -- Expressions --

    _expression: ($) =>
      choice(
        $.if_expr,
        $.match_expr,
        $.is_expr,
        $.assert_expr,
        $.binary_expr,
        $.unary_expr,
        $._primary,
      ),

    // v0.9.1: `assert` is an expression of type `()`.
    assert_expr: ($) =>
      prec.right(PREC.assert, seq("assert", field("cond", $._expression))),

    if_expr: ($) =>
      seq(
        "if",
        field("cond", $._expression),
        field("then", $.block),
        "else",
        field("else", choice($.if_expr, $.block)),
      ),

    match_expr: ($) =>
      seq(
        "match",
        field("disc", $._expression),
        "{",
        repeat($.match_arm),
        "}",
      ),
    // Arms are newline-separated; a trailing comma is permitted but not
    // required.
    match_arm: ($) =>
      prec.right(
        seq(
          field("pattern", $._pattern),
          "=>",
          // `_expression` already includes `block` via `_primary`, so a
          // `{ … }` arm body is covered without a separate alternative.
          field("body", $._expression),
          optional(","),
        ),
      ),
