tree-sitter-karn/test/corpus/v0.10.txt
================================================================================
on cron handler
================================================================================

context reaper

service sweeper from cron {
  on schedule("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (service_decl
      (identifier)
      (service_protocol)
      (handler
        (cron_handler
          (string_literal)
          (generic_type_ref
            (builtin_type)
            (generic_type_ref
              (builtin_type)
              (unit_type)
              (base_type)))
          (block
            (ok_expr
              (unit_literal))))))))

================================================================================
on cron handler with scheduled-time param and given
================================================================================

context metrics

service ticker from cron {
  on schedule("0 * * * *") (at: Int) -> Effect[Result[(), String]] given Pinger {
    Ok(())
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (service_decl
      (identifier)
      (service_protocol)
      (handler
        (cron_handler
          (string_literal)
          (param
            (identifier)
            (base_type))
          (generic_type_ref
            (builtin_type)
            (generic_type_ref
              (builtin_type)
              (unit_type)
              (base_type)))
          (given_clause
            (qualified_name
              (identifier)))
          (block
            (ok_expr
              (unit_literal))))))))

================================================================================
on queue handler
================================================================================

context mailer

service outbox from queue("outbound-email") {
  on message(message: EmailJob) -> Effect[QueueResult] {
    Ack
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (service_decl
      (identifier)
      (service_protocol
        (string_literal))
      (handler
        (queue_handler
          (param
            (identifier)
            (identifier))
          (generic_type_ref
            (builtin_type)
            (identifier))
          (block
            (identifier)))))))
