tree-sitter-karn/test/corpus/v0.17.txt
================================================================================
adapter with binding, requires, boundary types, and a bodiless provider
================================================================================

adapter tokens {
  binding "./tokens.binding.ts" requires { "jose": "^5" }
  exports capability { Jwt }
  exports transparent { Claims }
  type Claims = { sub: String }
  capability Jwt {
    fn sign(claims: Claims) -> Effect[String]
  }
  provides Jwt = JoseJwt
}

--------------------------------------------------------------------------------

(source_file
  (adapter_decl
    name: (qualified_name
      (identifier))
    (binding_decl
      module: (string_literal)
      (binding_requirement
        package: (string_literal)
        range: (string_literal)))
    (exports_decl
      name: (identifier))
    (exports_decl
      name: (identifier))
    (type_decl
      name: (identifier)
      body: (record_type
        (record_field
          name: (identifier)
          type: (base_type))))
    (capability_decl
      name: (identifier)
      (capability_op
        name: (identifier)
        (param
          name: (identifier)
          type: (identifier))
        return_type: (generic_type_ref
          name: (builtin_type)
          arg: (base_type))))
    (provider_decl
      capability: (identifier)
      provider: (identifier))))

================================================================================
selected-capabilities consumes with bare names
================================================================================

context auth.sessions

consumes tokens { Jwt, Logger }

service login {
  on call() -> Effect[Int] given Jwt {
    1
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    name: (qualified_name
      (identifier)
      (identifier))
    (consumes_decl
      target: (qualified_name
        (identifier))
      capability: (identifier)
      capability: (identifier))
    (service_decl
      name: (identifier)
      (handler
        (call_handler
          return_type: (generic_type_ref
            name: (builtin_type)
            arg: (base_type))
          given: (given_clause
            capability: (qualified_name
              (identifier)))
          body: (block
            tail: (number_literal)))))))

================================================================================
adapter in fragment form
================================================================================

adapter karn

capability Clock {
  fn now() -> Effect[Int]
}

provides Clock = ClockProvider

--------------------------------------------------------------------------------

(source_file
  (adapter_decl
    name: (qualified_name
      (identifier))
    (capability_decl
      name: (identifier)
      (capability_op
        name: (identifier)
        return_type: (generic_type_ref
          name: (builtin_type)
          arg: (base_type))))
    (provider_decl
      capability: (identifier)
      provider: (identifier))))
