tree-sitter-karn/test/corpus/v0.9.txt
================================================================================
on http handler with path params and HttpResult
================================================================================

context orders

service api from http {
  on GET("/orders/:id") (id: String) -> Effect[HttpResult[String]] {
    Ok("an order")
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (service_decl
      (identifier)
      (service_protocol)
      (handler
        (http_handler
          (http_method)
          (string_literal)
          (param
            (identifier)
            (base_type))
          (generic_type_ref
            (builtin_type)
            (generic_type_ref
              (builtin_type)
              (base_type)))
          (block
            (ok_expr
              (string_literal))))))))

================================================================================
consumes with alias
================================================================================

context commerce.orders

consumes commerce.payment as Pay

type E = | X

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier)
      (identifier))
    (consumes_decl
      (qualified_name
        (identifier)
        (identifier))
      (identifier))
    (type_decl
      (identifier)
      (sum_type
        (sum_variant
          (constant_name))))))

================================================================================
test unit with mocks and assert
================================================================================

test commerce.payment {
  mocks Logger = Silent {
    fn log(m: String) -> Effect[()] {
      ()
    }
  }

  test "authorises" {
    let r <- authorise.call(1)
    assert r is Ok(_)
  }
}

--------------------------------------------------------------------------------

(source_file
  (test_decl
    (qualified_name
      (identifier)
      (identifier))
    (mocks_decl
      (identifier)
      (identifier)
      (provider_op
        (identifier)
        (param
          (identifier)
          (base_type))
        (generic_type_ref
          (builtin_type)
          (unit_type))
        (block
          (unit_literal))))
    (test_case
      (string_literal)
      (block
        (effect_let_stmt
          (identifier)
          (method_call
            (identifier)
            (identifier)
            (number_literal)))
        (assert_expr
          (is_expr
            (identifier)
            (variant_pattern
              (identifier)
              (positional_binding))))))))

================================================================================
assert as statement and as match-arm body
================================================================================

test commerce.money {
  test "asserts" {
    let m = Money.of(5)
    assert m is Ok(_)
    match m {
      Ok(_) => assert true
      Err(_) => assert false
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (test_decl
    (qualified_name
      (identifier)
      (identifier))
    (test_case
      (string_literal)
      (block
        (let_stmt
          (identifier)
          (method_call
            (identifier)
            (identifier)
            (number_literal)))
        (assert_expr
          (is_expr
            (identifier)
            (variant_pattern
              (identifier)
              (positional_binding))))
        (match_expr
          (identifier)
          (match_arm
            (variant_pattern
              (identifier)
              (positional_binding))
            (assert_expr
              (boolean_literal)))
          (match_arm
            (variant_pattern
              (identifier)
              (positional_binding))
            (assert_expr
              (boolean_literal))))))))

================================================================================
doc block attached to fragment-form commons
================================================================================

commons karn.time

---
A length of time in milliseconds.
---
type Duration = opaque Int

--------------------------------------------------------------------------------

(source_file
  (commons_decl
    (qualified_name
      (identifier)
      (identifier))
    (doc_block)
    (type_decl
      (identifier)
      (opaque_type
        (base_type)))))
